@@ -293,4 +293,5 @@ Revision	Version Updated		Log Message
 271		C++			Allow Mantua to map to Lombardia.
 272		C++			Fix Yap Islands/Micronesia Sea mappings.
 273		N/A			Clean up some stray files
-274		C#			Introduce Province Mapper tool
+274		ProvinceMapper		Introduce Province Mapper tool
+275		ProvinceMapper		Handle new mappings files a bit better
